client/client_pages/profile/profile.css
@import url(/client/base.css);

:root {
    --base-font-size: 1rem;
    --main-label-size: 1.25rem;
    --cocktail-img-size: 220px;
    --btn-part-size: 40px;
    --btn-img-size: 24px;
    --profile-picture-size: 270px;
}
body {
    display: grid;
    grid-template-areas:
        "h h"
        "s m"
        "f f";
    grid-template-columns: 335px auto;
    grid-template-rows: 135px auto 35px;
    margin: 0;
    font-size: var(--base-font-size);
}
main {
    display: grid;
    grid-template-areas:
        "stats"
        "recommendations";
    grid-template-rows: min-content auto;
    row-gap: 35px;
}
#stats-border {
    grid-area: stats;
}
#recommendation-border {
    grid-area: recommendations;
}
.subheader {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    margin-bottom: 0;
}
.btn-edit {
    --btn-part-size: 30px;
    --btn-img-size: 20px;
}

.element-inner-container {
    position: relative;
    overflow-x: auto;
    width: 100%;
    height: 43px;
    white-space: nowrap;
}
.element-input.tags {
    display: inline-block;
    white-space: nowrap;
    min-width: 260px;
    width: max-content;
    overflow-x: auto;
    max-width: 90%;
}
.tags-content {
    position: absolute;
    left: 5px;
    right: 5px;
    overflow-x: auto;
    white-space: nowrap;
    border-radius: 35px;
    background-color: var(--white-33-opacity);
    padding: 5px 15px;
    max-width: 100%;
}
.input-writable {
    color: black;
    text-shadow: none;
    background-color: white;
}

#profile-border {
    border-radius: 200px 200px 35px 35px;
}
.profile-picture-container {
    width: var(--profile-picture-size);
    height: var(--profile-picture-size);
    padding-top: 15px;
    display: flex;
    justify-content: center;
}
.profile-picture {
    width: 100%;
    height: 100%;
    border-radius: 50%;
    box-shadow: 0 3px 10px black;
}
.btn-container {
    margin-top: 5%;
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.btn-normal-grey {
    font-size: 135%;
    margin: 0 5px 0 5px;
}

#stats-border {
    display: grid;
    grid-template-areas:
        "fav stats";
    grid-template-columns: calc(var(--cocktail-img-size) + 20px) auto;
    column-gap: 2%;
}
#fav-cocktail {
    grid-area: fav;
}
#stats {
    grid-area: stats;
}
#placeholder-fav {
    width: var(--cocktail-img-size);
    height: var(--cocktail-img-size);
    border-radius: 10px;
}

.stats-bar-container {
    height: 30px;
    width: calc(100% - 15px);
    padding: 10px 0 10px 0;
    margin: 10px 0 20px 7px;
    border-radius: 15px;
    background: var(--grey-50-opacity);
    overflow: hidden;
}
.stats-bar {
    height: 100%;
    width: 100%;
    background: var(--grey);
    filter: drop-shadow(0 0 3px var(--black-66-opacity));
}

.stats-container {
    display: grid;
    grid-template-areas:
        "s-r s-s";
    font-size: 1.25em;
    align-content: center;
}
.stats-container > * {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    height: 100%;
}
.stats-ratings {
    grid-area: s-r;
}
.stats-sum {
    grid-area: s-s;
}
.stat-item {
    display: grid;
    grid-template-areas:
        "s-img s-label s-value";
    align-items: center;
    justify-content: flex-start;
    gap: 5%;
    margin-bottom: 10px;
}
.stat-label {
    grid-area: s-label;
    color: white;
}
.stat-value {
    grid-area: s-value;
    color: var(--orange);
}

/* Responsive Layout */
@media (max-width: 930px) {
    .btn-normal-grey {
        display: flex;
    }
}

